Fix bugs, Add Simon, Add Sonar

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -273,6 +273,7 @@
   "Busy": "Busy",
   "Truant": "Truant",
   "Disco": "Disco",
+  "Sonar": "Sonar",
   "Asthmatic": "Asthmatic",
   "Giant": "Giant",
   "Torch": "Torch",
@@ -332,6 +333,7 @@
   "Prefix.Busy": "Busy",
   "Prefix.Truant": "Truant",
   "Prefix.Disco": "Disco",
+  "Prefix.Sonar": "Sonar",
   "Prefix.Asthmatic": "Asthmatic",
   "Prefix.Giant": "Giant",
   "Prefix.Torch": "Torch",
@@ -593,6 +595,7 @@
   "LazyInfo": "You're too lazy",
   "AutopsyInfo": "You see how others died",
   "DiscoInfo": "You continuously change colors",
+  "Sonar": "You have an arrow pointing to the nearest player",
   "LoyalInfo": "You cannot be recruited",
   "EvilSpiritInfo": "You are an evil Spirit",
   "RecruitInfo": "Help the Jackal",
@@ -794,6 +797,7 @@
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
   "BusyInfoLong": "(Add-ons):\\nYou have more tasks.",
   "DiscoInfoLong": "(Add-ons):\\nYou change your skin color every few seconds.",
+  "SonarInfoLong": "(Add-ons):\\nYou see an arrow pointing to the nearest player.",
   "TorchInfoLong": "(Add-ons):\\nOnly Crewmates will get Torch, who have increased vision and may not be affected by Lights Sabotage.",
   "SeerInfoLong": "(Add-ons):\\nWhen a player dies, the Seer sees a red flash (with an alarm sound like sabotage).",
   "BrakarInfoLong": "(Add-ons):\\nIn case of a tie, the target voted by the Tiebreaker has priority. However, if multiple Tiebreakers choose different targets simultaneously, their skills will not take effect.",
@@ -1512,6 +1516,7 @@
   "WorkaholicCannotWinAtDeath": "Can't win after they died",
   "WorkaholicVisibleToEveryone": "Everyone knows who the <color=#008b8b>Workaholic</color> is",
   "WorkaholicGiveAdviceAlive": "Advice at first meeting if alive, can win after death, ghost tasks ON",
+  "WorkaholicSpeed": "<color=#008b8b>Workaholic</color> Speed",
   "DoctorVisibleToEveryone": "Everyone knows who the <color=#80ffdd>Doctor</color> is",
   "GuardSpellTimes": "Amount of Cursed Shields",
   "JinxSpellTimes": "Amount of Jinx Spells",
@@ -1648,7 +1653,7 @@
   "NeutralCanBeDoubleShot": "<color=#ffab1b>Neutrals</color> can have <color=#19fa8d>Double Shot</color>",
   "MimicCanSeeDeadRoles": "<color=#ff1919>Mimic</color> can see the roles of dead players",
   "CanBeSoldByMerchant": "Can be sold by <color=#D27D2D>Merchant</color>",
-  "CanBeGuessed": "Can be guessed",
+  "CanBeGuessed": "Can Be Guessed",
   "GuessTaskDone": "Sorry, you can't guess someone who has finished their tasks.",
   "CanBeInLove": "Can be <color=#ff9ace>in love</color>",
   "DisableCrackedGlass": "Disable Cracked Glass on Meeting Screen",
@@ -1991,7 +1996,7 @@
   "MerchantTargetImpostor": "Can sell to <color=#ff1919>Impostors</color>",
   "MerchantTargetNeutral": "Can sell to <color=#ffab1b>Neutrals</color>",
   "MerchantSellHelpful": "Can sell <color=#8cffff>Helpful</color> Add-ons",
-  "MerchantSellBalanced": "Can sell <color=#00ffa5>Balanced</color> Add-ons",
+  "MerchantSellMixed": "Can sell <color=#00ffa5>Mixed</color> Add-ons",
   "MerchantSellOnlyEnabledAddons": "Can Only Sell Enabled Add-ons",
   "MerchantSellHarmful": "Can sell <color=#ff1919>Harmful</color> Add-ons",
   "MerchantSellNeutral": "Can sell <color=#ffab1b>Neutral</color> Add-ons",
@@ -2009,6 +2014,7 @@
   "CrewpostorLungeKill": "Lunge on Kills",
   "CrewpostorKillAfterTask": "Amount of Task Completions Required to make 1 Kill",
   "SpeedrunnerHasXTasksLeft": "\n<color=#800080>{0}</color> is the <color=#800080>Speedrunner</color>!\\nThey have {1} task(s) left.",
+  "SpeedrunnerSpeed": "<color=#800080>Speedrunner</color> Speed",
   "Message.SetToSeconds": "Set to <b>{0}</b> seconds.",
   "Message.MessageWaitHelp": "Specify the first argument in seconds.",
   "Message.TemplateNotFoundHost": "No templates matching <b>{0}</b> were found",
@@ -3451,6 +3457,20 @@
   "TrollInfoLong": "GET KILLED TO WIN",
   "TrollVision": "Troll Vision",
   "TrollSpeed": "Troll Speed",
+  "Goose": "Goose",
+  "GooseInfo": "Honk at players to annoy them",
+  "GooseInfoLong": "(Crewmates):\\nAs the Goose, you can honk at players to annoy them.\\nYou can drag them around and make them unable to use their abilities while you're honking at them.",
+  "Simon": "Simon",
+  "SimonInfo": "Give Instructions to Players",
+  "SimonInfoLong": "(Neutrals):\\nAs Simon, you can give instructions to players (Simon Says).\\nSingle click on someone to mark them, double click to kill to kill them.\\nVent to give out an instruction to all marked players. Players with kill buttons will be told to kill, while crewmates will be told to complete a task. If they don't follow the instruction until the next meeting, they will die.\\nYou can sabotage/pet your pet to swap the instruction. This means, those who can, will be told to NOT kill, while crewmates will be told to NOT complete a task.",
+  "SimonKill": "Simon says: <#ffff00>You must use your kill button before the next meeting</color>",
+  "SimonTask": "Simon says: <#ffff00>You must complete a task before the next meeting</color>",
+  "SimonDontKill": "Simon says: <#ffff00>You must NOT use your kill button until the next meeting</color>",
+  "SimonDontTask": "Simon says: <#ffff00>You must NOT complete a task until the next meeting</color>",
+  "SimonDoShort": "<#ff0000>Must do instruction</color>",
+  "SimonDontShort": "<#ffa500>Must not do instruction</color>",
+  "SimonDoMode": "<#00ffa5>Mode:</color> Do instruction",
+  "SimonDontMode": "<#00ffa5>Mode:</color> Do NOT do instruction",
   "Generator": "Generator",
   "GeneratorInfo": "Power up the ship",
   "GeneratorInfoLong": "(Impostors):\\nAs the Generator, you generate charges every second. You can only kill/vent/shapeshift/sabotage if you have enough charges to do so. You also lose charges while shapeshifted.",
