Anti-TP (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -263,6 +263,7 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
+  "AntiTP": "Anti-TP",
   "Taskcounter": "Taskcounter",
   "Bloodlust": "Bloodlust",
   "Stained": "Stained",
@@ -323,6 +324,7 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
+  "Prefix.AntiTP": "Anti-TP",
   "Prefix.Taskcounter": "Taskcounter",
   "Prefix.Bloodlust": "Bloodlust",
   "Prefix.Stained": "Stained",
@@ -580,6 +582,7 @@
   "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
+  "AntiTPInfo": "You can't be teleported",
   "TaskcounterInfo": "You see the total tasks completed in real time",
   "BloodlustInfo": "You can kill",
   "StainedInfo": "Your killer gets a violet name for 3s",
@@ -595,7 +598,7 @@
   "LazyInfo": "You're too lazy",
   "AutopsyInfo": "You see how others died",
   "DiscoInfo": "You continuously change colors",
-  "Sonar": "You have an arrow pointing to the nearest player",
+  "SonarInfo": "You have an arrow pointing to the nearest player",
   "LoyalInfo": "You cannot be recruited",
   "EvilSpiritInfo": "You are an evil Spirit",
   "RecruitInfo": "Help the Jackal",
@@ -788,6 +791,7 @@
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
+  "AntiTPInfoLong": "(Add-ons):\\nYou cannot be teleported.",
   "TaskcounterInfoLong": "(Add-ons):\\nTask Counter can see the total number of tasks completed (by everyone all together) next to their role name, which updates in real-time.",
   "BloodlustInfoLong": "(Add-ons):\\nYou can kill. You are a neutral killer, while also keeping the ability of your role (as much as host-only limitations allow).",
   "StainedInfoLong": "(Add-ons):\\nYour killer gets a violet name for 3 seconds.",
