Rework add-on assignment, fix some bugs

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3637,14 +3637,16 @@
   "BloodmoonInfoLong": "(Impostors):\\nAs the Bloodmoon, you can use your protect button on someone to make them die after a set amount of seconds. They know about this.",
   "Bloodmoon.Duration": "Time After Target Dies",
   "Bloodmoon.Suffix": "<{1}>You will die in <{2}>{0}s</color></color>",
+  "Bloodmoon.Speed": "<#ff1919>Bloodmoon</color> Speed",
+  "Prefix.Bloodmoon": "Bloodmoon",
   "Haunter": "Haunter",
   "HaunterInfo": "You're the Impostors' Worst Nightmare",
   "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
-  "Haunter1TaskLeft": "The Haunter has 1 task left! Go near them or you might be revealed!",
-  "HaunterRevealedYou": "Your team has been revealed by the Haunter!",
+  "Haunter1TaskLeft": "<#ffff00>The Haunter has almost finished their tasks!\\nGo near them or you might be revealed!</color>",
+  "HaunterRevealedYou": "You have been revealed by the Haunter!",
   "HaunterFinishedTasks": "The Haunter completed all tasks, an impostor was revealed! (But it wasn't you)",
-  "HaunterStopped": "The Haunter was successfully stopped!",
-  "HaunterStoppedSelf": "An impostor came too close to you, your role was removed.",
+  "HaunterStopped": "<#00ff00>The Haunter was successfully stopped!</color>",
+  "HaunterStoppedSelf": "<#ff1313>An impostor came too close to you, your role was removed.</color>",
   "Haunter.TasksBeforeBeingKnown": "Reveal Haunter When They've Completed This Many Tasks",
   "Haunter.RevealNeutralKillers": "Can Reveal <#ffab1b>Neutral Killers</color>",
   "Haunter.RevealMadmates": "Can Reveal <#ff1919>Madmates</color>",
