--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2645,12 +2645,25 @@
   "Sentry.Notify.Shapeshifted": "{0} shapeshifted into {1} in your monitored room",
   "Sentry.Notify.Vented": "{0} vented in your monitored room",
   "Sentry.Notify.InvalidRoom": "You are not in a room",
+  "Dynamo": "Dynamo",
+  "DynamoInfo": "You get faster by walking",
+  "DynamoInfoLong": "(Add-ons):\\nAs the Dynamo, you get faster by walking. The longer you walk, the faster you get. Stopping will reset your speed.",
+  "Prefix.Dynamo": "Dynamo",
   "Samurai": "Samurai",
   "SamuraiInfo": "Kill Players in Unique Ways",
   "SamuraiInfoLong": "(Neutrals):\\nAs the Samurai, you can do delayed kills and normal kills. What decides? Well, if you click your kill button on someone (the kill won't occur immediately) and you stay near them for a few seconds (like an arsonist douse), you get a lower kill cooldown and the kill will be delayed. If you fail to stay near them, you do a normal kill, lunge included.",
   "Samurai.NearbyDuration": "Time to Stay Near Target",
   "Samurai.SuccessKCD": "Kill Cooldown for Delayed Kills",
   "Samurai.KillDelay": "Kill Delay",
+  "Overheat": "Overheat",
+  "OverheatInfo": "Hot = Low Kill Cooldown",
+  "OverheatInfoLong": "(Impostors):\\nAs the Overheat, your kill cooldown is based on your temperature. The more you wat, the hotter you get, and the lower your kill cooldown becomes, but your chance of overheating is also increasing. You can shapeshift or pet your pet to cool down to reset your temperature. This freezes you in place for a few seconds.",
+  "Overheat.Suffix": "<size=80%>Temperature: {0}</size>",
+  "Overheat.ChanceIncrease": "Temperature Increase Rate",
+  "Overheat.ChanceIncreaseFrequency": "Temperature Increase Frequency",
+  "Overheat.RollChanceFrequency": "Frequency of Rolling for Overheat",
+  "Overheat.CoolDownTime": "Cool Down Time",
+  "Overheat.KCDDecreasePerIncreasedTemperature": "Kill Cooldown Decrease per Increased Temperature",
   "QuizMaster": "Quiz Master",
   "QuizMasterInfo": "Ask Questions to Players",
   "QuizMasterInfoLong": "(Neutrals):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
