Bug fixes, ability gain settings jump by 0.05f

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3316,6 +3316,12 @@
   "SwapDead": "You cannot swap votes after you've died.",
   "SwapVote": "The votes received by <b>{0}</b> and <b>{1}</b> were swapped!",
   "SwapTitle": "[★ Swapper ★]",
+  "Swap1": "First Swap Target Chosen",
+  "Swap2": "Second Swap Target Chosen",
+  "CancelSwap1": "First Swap Target Cancelled",
+  "CancelSwap2": "Second Swap Target Cancelled",
+  "SwapHelp": "Use <b>/sw [ID]</b> to choose a player to swap votes with.",
+  "SwapNull": "No alive player with that ID",
   "SecurityGuard": "Security Guard",
   "SecurityGuardInfo": "Prevent Impostors from Sabotaging",
   "SecurityGuardInfoLong": "(Crewmates):\\nAs the Security Guard, you can vent/pet to activate your ability, which prevents everyone from calling any sabotages and closing doors while your ability is active. This affects the doors sabotage and neutrals as well.",
