--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -2094,27 +2094,27 @@
   "ERR-001-000-3": "Дублирование ключей происходит в основном словаре.",
   "DeathCommand": "<#ffffff>Вы были убиты игроком </color>{0}<#ffffff>\\nРоль этого игрока - </color>{1}",
   "DefaultSystemMessageTitle": "★ Системное сообщение ★",
-  "MessageFromTheHost": "★ Сообщение от хоста ★",
-  "SayTitle": "★ Сообщение от модератора ★",
-  "MessageFromEAC": "★ EAC ★",
-  "DetectiveNoticeTitle": "★ Сообщение для Detective'а ★",
-  "GuessKillTitle": "★ Сообщение об угадывании ★",
-  "CyberStarNewsTitle": "★ Срочные новости ★",
-  "GodAliveTitle": "★ Голос с небес ★",
-  "WorkaholicAliveTitle": "★ Сообщение о Workaholic'е ★",
-  "BaitAliveTitle": "★ Сообщение о Bait'е ★",
-  "MessageFromKPD": "★ KARPED1EM ★",
-  "MessageFromSponsor": "★ Спонсор ★",
-  "MessageFromDev": "★ Разработчик ★",
-  "DivinatorCheckMsgTitle": "★ Хрустальный шар ★",
-  "MimicMsgTitle": "★ Сообщение от мёртвого Mimic'а ★",
-  "EraserEraseMsgTitle": "★ Сообщение об Eraser'е ★",
-  "TrialKillTitle": "[★ Суд ★]",
-  "MorticianCheckTitle": "[★ Обследование трупа ★]",
-  "MediumshipTitle": "[★ Голос с того света ★]",
-  "MafiaRevengeTitle": "★ НОВОСТИ О МЕСТИ ★",
-  "RetributionistRevengeTitle": "★ НОВОСТИ О МЕСТИ ★",
-  "TrackerTitle": "★ Сообщение о Tracker'е ★",
+  "MessageFromTheHost": "★ СООБЩЕНИЕ ОТ ХОСТА ★",
+  "SayTitle": "<color=#8a1cff>★ СООБЩЕНИЕ ОТ МОДЕРАТОРА ★",
+  "MessageFromEAC": "[ ★ EAC ★ ]",
+  "DetectiveNoticeTitle": "[ ★ Сообщение для Detective'а ★ ]",
+  "GuessKillTitle": "[ ★ Сообщение об угадывании ★ ]",
+  "CyberStarNewsTitle": "[ ★ Срочные новости ★ ]",
+  "GodAliveTitle": "[ ★ Голос с небес ★ ]",
+  "WorkaholicAliveTitle": "[ ★ Сообщение о Workaholic'е ★ ]",
+  "BaitAliveTitle": "[ ★ Сообщение о Bait'е ★ ]",
+  "MessageFromKPD": "[ ★ KARPED1EM ★ ]",
+  "MessageFromSponsor": "[ ★ Спонсор ★ ]",
+  "MessageFromDev": "[ ★ Разработчик ★ ]",
+  "DivinatorCheckMsgTitle": "[ ★ Хрустальный шар ★ ]",
+  "MimicMsgTitle": "[ ★ Сообщение от мёртвого Mimic'а ★ ]",
+  "EraserEraseMsgTitle": "[ ★ Сообщение об Eraser'е ★ ]",
+  "TrialKillTitle": "[ ★ Суд ★ ]",
+  "MorticianCheckTitle": "[ ★ Обследование трупа ★ ]",
+  "MediumshipTitle": "[ ★ Голос с того света ★ ]",
+  "MafiaRevengeTitle": "[ ★ НОВОСТЬ О МЕСТИ ★ ]",
+  "RetributionistRevengeTitle": "[ ★ НОВОСТЬ О МЕСТИ ★ ]",
+  "TrackerTitle": "[ ★ Сообщение о Tracker'е ★ ]",
   "Temp.Blank": "",
   "TabGroup.SystemSettings": "Настройки Системы",
   "TabGroup.GameSettings": "Настройки Игры",
@@ -2742,6 +2742,7 @@
   "Chemist.Item.Steam": "Пар",
   "Chemist.Item.ThermalWater": "Термальная вода",
   "Chemist.Item.Water": "Вода",
+  "Chemist.Item.IronOre": "Железная руда",
   "Chemist.Item.Explosive.Usage": "Кол-во пороха, теряемого во время использования",
   "Chemist.Item.Grenade.Usage": "Кол-во гранат, теряемых во время использования",
   "Chemist.Item.SulfuricAcid.Usage": "Кол-во кислоты, теряемое во время использования",
@@ -3315,6 +3316,12 @@
   "SwapDead": "Вы не можете свапать голоса после смерти.",
   "SwapVote": "Swapper свапнул голоса <b>{0}</b> и <b>{1}</b>!",
   "SwapTitle": "[★ Swapper ★]",
+  "Swap1": "Первая цель для свапа выбрана",
+  "Swap2": "Вторая цель для свапа выбрана",
+  "CancelSwap1": "Первая цель для свапа отменена",
+  "CancelSwap2": "Вторая цель для свапа отменена",
+  "SwapHelp": "Используйте <b>/sw [ID игрока]</b>, чтобы выбрать <b>одного из игроков</b> для свапа.",
+  "SwapNull": "Нету живых игроков с этим ID",
   "SecurityGuard": "Security Guard",
   "SecurityGuardInfo": "Не позволяй <color=#ff1919>убийцам</color> саботировать",
   "SecurityGuardInfoLong": "(Член Экипажа):\\nКак Security Guard, вы можете прыгнуть в люк/погладить питомца, чтобы временно заблокировать возможность саботировать. Это также затрагивает саботаж дверей и Нейтралов.",
