--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -2296,6 +2296,7 @@
   "InfectiousKillButtonText": "Infectar",
   "MonarchKillButtonText": "Nomear",
   "FarseerKillButtonText": "Revelar",
+  "SentryPetButtonText": "Monitor",
   "DisabledBySettings": "Desabilitado pelas Configurações",
   "Disabled": "Desabilitado",
   "FailToTrack": "Falha ao Localizar",
