--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -567,7 +567,7 @@
   "FoolInfo": "Ты не можешь чинить саботажи",
   "AvangerInfo": "Ты мстишь за свою смерть",
   "YoutuberInfo": "Будь первым убитым, чтобы победить!",
-  "HasteInfo": "Твоя перезарядка убийства продолжается в люках",
+  "HasteInfo": "Твой откат убийства идёт всегда",
   "EgoistInfo": "Выиграй без них",
   "TicketsStealerInfo": "Кради голоса своих жертв",
   "DualPersonalityInfo": "Тебя двое",
@@ -827,7 +827,7 @@
   "KnightedInfoLong": "(Атрибут):\\nВас посвятил Monarch, теперь у вас есть дополнительный голос.",
   "AsthmaticInfoLong": "(Атрибут):\\nУ вас есть символ около никнейма с красным или зелёным таймером. Если вы будете двигаться во время красного таймера, вы умрёте.",
   "UnreportableInfoLong": "(Атрибут):\\nВаш труп не может быть зарепорчен.",
-  "HasteInfoLong": "(Атрибут):\\nВаша перезарядка убийства продолжает идти даже когда вы в люке.",
+  "HasteInfoLong": "(Атрибут):\\nВаша перезарядка убийства продолжает идти всегда.",
   "ContagiousInfoLong": "(Командный Атрибут):\\nВы зарепортили заражённый Virus'ом труп.\\nТеперь вы в команде Virus'a. Помогите ему победить!\\nПримечание: в зависимости от настроек, Contagious игроки умирают после собрания.",
   "RogueInfoLong": "(Комнадный Атрибут):\\nКак Rogue, вы работаете против своей команды и помогаете другим Rogue игрокам.",
   "LuckyInfoLong": "(Атрибут):\\nКогда Lucky пытаются убить напрямую, есть небольшой шанс (зависящий от настроек), что он выживет. Он не узнаете о попытке убийства.",
@@ -1003,7 +1003,7 @@
   "AutoDisplayLastResult": "Авто-отображение результата прошлой игры",
   "EnableYTPlan": "Включить Ютуб-план",
   "KickLowLevelPlayer": "Кикнуть игроков, чей уровень ниже",
-  "AutoKickStart": "Кикнуть игроков, которые просят начать",
+  "AutoKickStart": "Кикнуть игроков, которые просят начать игру",
   "AutoKickStartTimes": "Кол-во предупреждений до кика",
   "AutoKickStartAsBan": "Блокировать кикнутых игроков",
   "AutoKickStopWords": "Кикнуть игроков, пишущих запрещённые слова",
@@ -1026,7 +1026,7 @@
   "ChangeDecontaminationTime": "Изменить время обеззараживания (<color=#e84b56>MIRA HQ</color>/<color=#a167c0>Polus</color>)",
   "DecontaminationTimeOnMiraHQ": "Время обеззараживания на <color=#e84b56>MIRA HQ</color>",
   "DecontaminationTimeOnPolus": "Время обеззараживания на <color=#a167c0>Polus</color>",
-  "KickAndroidPlayer": "Кикнуть игроков с телефона",
+  "KickAndroidPlayer": "Кикнуть игроков с телефонов",
   "ShareLobby": "Отправлять код вашей комнаты в ДС сервер EHR",
   "ShareLobbyMinPlayer": "Минимальное кол-во игроков для отправки кода",
   "DisableVanillaRoles": "Выключить ванильные роли",
@@ -1090,7 +1090,7 @@
   "RoleAssigningAlgorithm.Xorshift": "Xorshift",
   "RoleAssigningAlgorithm.MersenneTwister": "MersenneTwister",
   "DisableAirshipMovingPlatform": "Выключить движущуюся платформу (Airship)",
-  "DisableSporeTriggerOnFungle": "Выключить споры (Fungle)",
+  "DisableSporeTriggerOnFungle": "Выключить споры (<color=#ffa646>Fungle</color>)",
   "DisableZiplineOnFungle": "Выключить канатку (<color=#ffa646>Fungle</color>)",
   "DisableZiplineFromTop": "Выключить сверху",
   "DisableZiplineFromUnder": "Выключить снизу",
@@ -1106,7 +1106,7 @@
   "AirshipVariableElectrical": "Вариативный электрощит (Airship)",
   "ApplyDenyNameList": "Применить список запрещённых имён",
   "KickPlayerFriendCodeNotExist": "Кикнуть игроков без кода друга",
-  "ApplyBanList": "Включить бан-лист",
+  "ApplyBanList": "Применить бан-лист",
   "EndWhenPlayerBug": "Закончить игру при критических ошибках для предотвращения чёрного экрана",
   "KillFlashDuration": "Длительность вспышки убийства",
   "ConfirmEjectionsMode": "При выкидывании показывать",
@@ -1115,10 +1115,10 @@
   "ConfirmEjections.Role": "Роль",
   "ShowImpRemainOnEject": "Показывать оставшихся <color=#ff1919>Предателей</color> при выкидывании",
   "ShowNKRemainOnEject": "Показывать оставшихся <color=#ffab1b>Нейтральных Убийц</color> при выкидывании",
-  "ConfirmEgoistOnEject": "Отображать <color=#5600ff>Egoist</color>'ов при выкидывании",
-  "ConfirmLoversOnEject": "Отображать <color=#ff9ace>Lovers</color> при выкидывании",
-  "ConfirmSidekickOnEject": "Отображать <color=#00b4eb>Sidekick</color>'ов при выкидывании",
-  "ConfirmRogueOnEject": "Отображать <color=#696969>Maverick</color>'ов при выкидывании",
+  "ConfirmEgoistOnEject": "Показывать <color=#5600ff>Egoist</color>'ов при выкидывании",
+  "ConfirmLoversOnEject": "Показывать <color=#ff9ace>Lover</color>'ов при выкидывании",
+  "ConfirmSidekickOnEject": "Показывать <color=#00b4eb>Sidekick</color>'ов при выкидывании",
+  "ConfirmRogueOnEject": "Показывать <color=#696969>Maverick</color>'ов при выкидывании",
   "HideBittenRolesOnEject": "Спрятать роли <color=#7b8968>укушенных<color> игроков при выкидывании",
   "ShowTeamNextToRoleNameOnEject": "Показывать, какой команде принадлежит роль при выкидывании",
   "Addon": "Add-on",
@@ -1237,7 +1237,7 @@
   "PuppeteerKCD": "Откат убийства Puppeteer'а",
   "PuppeteerCD": "Откат проклятия",
   "PuppeteerUsesRemaining": "У вас осталось {0} проклятий",
-  "PuppeteerCanKillNormally": "Може убивать обычным способом",
+  "PuppeteerCanKillNormally": "Может убивать обычным способом",
   "PuppeteerMinDelay": "Мин. задержка до того, как проклятый игрок убьёт",
   "PuppeteerMaxDelay": "Макс. задержка до того, как проклятый игрок убьёт",
   "PuppeteerManipulationEndsAfterFixedTime": "Проклятие спадает через определённое время",
@@ -1558,7 +1558,7 @@
   "JudgeTryHideMsg": "Спрятать команду /tl",
   "TrialLimitPerMeeting": "Кол-во судов за собрание",
   "TrialLimitPerGame": "Максимум судов за игру",
-  "JudgeCanTrialMadmate": "Может судить<color=#ff1919>Медмейтов</color>",
+  "JudgeCanTrialMadmate": "Может судить <color=#ff1919>Медмейтов</color>",
   "JudgeCanTrialCharmed": "Может судить <color=#cf6acd>Charmed</color> игроков",
   "VeteranSkillMaxOfUseage": "Изначальное количество способностей",
   "SwooperCooldown": "Откат невидимости",
@@ -1669,7 +1669,7 @@
   "KickCommandKickMod": "Вы не можете кикать других модераторов.",
   "KickCommandKicked": "был кикнут из игры.",
   "KickCommandKickedRole": "Его (её) роль был(-а)",
-  "ModeratorTag": "<color=8000ff>Модератор</color>",
+  "ModeratorTag": "<color=#8000ff>Модератор</color>",
   "DeathReason.Kill": "Убит",
   "DeathReason.Vote": "Выкинут",
   "DeathReason.Suicide": "Суицид",
@@ -1726,8 +1726,8 @@
   "RomanticInfo": "Выберите партнёра и выиграйте с ним!",
   "RomanticInfoLong": "(Добрый Нейтрал):\\nКак Romantic, вы можете использовать свою кнопку убийства на ком-то, чтобы избрать его своим партнёром.\\nПосле этого, когда вы будете использовать свою кнопку убийства на ком-либо, вашему партнёру будет даваться временный щит.\\nВы выигрываете, если ваш партнёр выигрывает.\\n\\nЕсли ваш партнёр умрёт, то, в зависимости от роли партнёра, вы превратитесь в следующую роль:\\n1. Если ваш партнёр был предателем, то вы станете Renegade\\n2. Если ваш партнёр был членом экипажа с кнопкой убийства, то вы станете его ролью\\n3. Если ваш партнёр был членом экипажа без кнопки убийства, то вы превратитесь в Vengeful Romantic\\n4. Если ваш партнёр был нейтральным убийцей, то вы станете его роль\\n5. Если ваш партнёр был не убивающим нейтралом, если ваш партнёр умер сам (убился/суицид) или если ваш партнёр погиб иным способом, но не подходит под предыдущие критерии, то вы првератитесь в Ruthless Romantic.\\n\\nЦель <b><color=#ba2749>Vengeful Romantic</color></b> - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу своего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.\\n\\nЦель <b><color=#D2691E>Ruthless Romantic</color></b> - убить всех. В таком случае он победит вместе с партнёром.",
   "VengefulRomantic": "Vengeful Romantic",
-  "VengefulRomanticInfo": "Убей убийцу своего партнёра!",
-  "VengefulRomanticInfoLong": "(Нейтрал):\\nЦель Vengeful Romantic - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу своего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.",
+  "VengefulRomanticInfo": "Убей убийцу твоего партнёра!",
+  "VengefulRomanticInfoLong": "(Нейтрал):\\nЦель Vengeful Romantic - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу вашего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.",
   "RuthlessRomantic": "Ruthless Romantic",
   "RuthlessRomanticInfo": "Убей всех",
   "RuthlessRomanticInfoLong": "(Нейтральный Убийца):\\nЦель Ruthless Romantic - убить всех. В таком случае он победит вместе с партнёром.",
@@ -1873,7 +1873,7 @@
   "JudgeDead": "Вы не можете судить после смерти",
   "JudgeTrialMax": "\\nУ вас не осталось судов",
   "LaughToWhoTrialSelf": "Куда ж катится мир, если судьи выносят приговор самим себе!",
-  "TrialKill": "<b>{0}</b>был засужен",
+  "TrialKill": "<b>{0}</b> был засужен",
   "TrialHelp": "Инструкция: /tl [Номер игрока]\\n Вы можете увидеть ID игрока перед его никнеймом или использовать команду /id для просмотра списка ID игроков.",
   "TrialNull": "Пожалуйста, выберите живого человека",
   "MimicDeadMsg": "Подсказка от Mimic'а:",
@@ -2094,27 +2094,27 @@
   "ERR-001-000-3": "Дублирование ключей происходит в основном словаре.",
   "DeathCommand": "<#ffffff>Вы были убиты игроком </color>{0}<#ffffff>\\nРоль этого игрока - </color>{1}",
   "DefaultSystemMessageTitle": "★ Системное сообщение ★",
-  "MessageFromTheHost": "★ СООБЩЕНИЕ ОТ ХОСТА ★",
-  "SayTitle": "<color=#8a1cff>★ СООБЩЕНИЕ ОТ МОДЕРАТОРА ★",
-  "MessageFromEAC": "[ ★ EAC ★ ]",
-  "DetectiveNoticeTitle": "[ ★ Сообщение для Detective'а ★ ]",
-  "GuessKillTitle": "[ ★ Сообщение об угадывании ★ ]",
-  "CyberStarNewsTitle": "[ ★ Срочные новости ★ ]",
-  "GodAliveTitle": "[ ★ Голос с небес ★ ]",
-  "WorkaholicAliveTitle": "[ ★ Сообщение о Workaholic'е ★ ]",
-  "BaitAliveTitle": "[ ★ Сообщение о Bait'е ★ ]",
-  "MessageFromKPD": "[ ★ KARPED1EM ★ ]",
-  "MessageFromSponsor": "[ ★ Спонсор ★ ]",
-  "MessageFromDev": "[ ★ Разработчик ★ ]",
-  "DivinatorCheckMsgTitle": "[ ★ Хрустальный шар ★ ]",
-  "MimicMsgTitle": "[ ★ Сообщение от мёртвого Mimic'а ★ ]",
-  "EraserEraseMsgTitle": "[ ★ Сообщение об Eraser'е ★ ]",
-  "TrialKillTitle": "[ ★ Суд ★ ]",
-  "MorticianCheckTitle": "[ ★ Обследование трупа ★ ]",
-  "MediumshipTitle": "[ ★ Голос с того света ★ ]",
-  "MafiaRevengeTitle": "[ ★ НОВОСТЬ О МЕСТИ ★ ]",
-  "RetributionistRevengeTitle": "[ ★ НОВОСТЬ О МЕСТИ ★ ]",
-  "TrackerTitle": "[ ★ Сообщение о Tracker'е ★ ]",
+  "MessageFromTheHost": "★ Сообщение от хоста ★",
+  "SayTitle": "★ Сообщение от модератора ★",
+  "MessageFromEAC": "[★ EAC ★]",
+  "DetectiveNoticeTitle": "[★ Сообщение для Detective'а ★]",
+  "GuessKillTitle": "[★ Сообщение об угадывании ★]",
+  "CyberStarNewsTitle": "[★ Срочные новости ★]",
+  "GodAliveTitle": "[★ Голос с небес ★]",
+  "WorkaholicAliveTitle": "[★ Сообщение о Workaholic'е ★]",
+  "BaitAliveTitle": "[★ Сообщение о Bait'е ★]",
+  "MessageFromKPD": "[★ HyperAtill ★]",
+  "MessageFromSponsor": "[★ Спонсор ★]",
+  "MessageFromDev": "[★ Разработчик ★]",
+  "DivinatorCheckMsgTitle": "[★ Хрустальный шар ★]",
+  "MimicMsgTitle": "[★ Сообщение от мёртвого Mimic'а ★]",
+  "EraserEraseMsgTitle": "★ Сообщение об Eraser'е ★]",
+  "TrialKillTitle": "[★ Суд ★]",
+  "MorticianCheckTitle": "[★ Обследование трупа ★]",
+  "MediumshipTitle": "[★ Голос с того света ★]",
+  "MafiaRevengeTitle": "[★ НОВОСТИ О МЕСТИ ★]",
+  "RetributionistRevengeTitle": "[★ НОВОСТИ О МЕСТИ ★]",
+  "TrackerTitle": "[★ Сообщение о Tracker'е ★]",
   "Temp.Blank": "",
   "TabGroup.SystemSettings": "Настройки Системы",
   "TabGroup.GameSettings": "Настройки Игры",
@@ -2129,7 +2129,7 @@
   "OtherRoles.NeutralRoles": "★ Роли Нейтралов",
   "OtherRoles.ImpostorRoles": "★ Роли Предателей",
   "OtherRoles.Addons": "★ Атрибуты",
-  "JudgeCanTrialnCrewKilling": "Может судить <color=#ff1919>убивающих</color> <color=#8cffff>Членов Экипажа</color>",
+  "JudgeCanTrialnCrewKilling": "Может судить <color=#ff1919>Убивающих</color> <color=#8cffff>Членов Экипажа</color>",
   "JudgeCanTrialNeutralB": "Может судить <color=#046300>Добрых</color> <color=#ffab1b>Нейтралов</color>",
   "JudgeCanTrialNeutralK": "Может судить <color=#ff1919>Убивающих</color> <color=#ffab1b>Нейтралов</color>",
   "JudgeCanTrialNeutralE": "Может судить <color=#912900>Злых</color> <color=#ffab1b>Нейтралов</color>",
@@ -2307,7 +2307,7 @@
   "InfectiousKillButtonText": "Заразить",
   "MonarchKillButtonText": "Посвятить",
   "FarseerKillButtonText": "Раскрыть",
-  "SentryPetButtonText": "Датчик",
+  "SentryPetButtonText": "Сенсор",
   "DisabledBySettings": "Выключено настройками",
   "Disabled": "Выключено",
   "FailToTrack": "Не удалось отследить",
@@ -2845,7 +2845,7 @@
   "NullifierInfo": "Убирай способности у Членов Экипажа",
   "NullifierInfoLong": "(Предатель):\\nКак Nullifier, вы можете использовать свою кнопку убийства, чтобы забрать 1 или несколько единиц способности у любого игрока. Двойное нажатие кнопки убийства приведёт к обычному убийству. Если у цели не было единиц способности, ничего не произойдёт.\\n\\nПримечание: вы не узнаете, были ли единицы способности у игрока, однако, сам игрок может заметить, что у него убавились единицы способности. Будьте осторожны!",
   "NullifierUseRemoved": "Способностей убирается",
-  "NullCD": "Откат способности",
+  "NullCD": "Откат уборки способностей",
   "NullifierDelay": "Задержка уборки способностей",
   "Ventguard": "Ventguard",
   "VentguardInfo": "Блокируй люки",
@@ -3056,14 +3056,14 @@
   "CustomTeamHelp": "Вы состоите в {0}!{1}\\nРаботайте сообща, чтобы выиграть вместе!",
   "NoPetActionMsg1": "Вы съели печеньку",
   "NoPetActionMsg2": "Вы осмотрелись",
-  "NoPetActionMsg3": "Вы задумались, подозрительные вы или нет...",
+  "NoPetActionMsg3": "Вы задумались, подозрительные ли вы или нет...",
   "NoPetActionMsg4": "Вы практикуетесь в роли детектива",
   "NoPetActionMsg5": "Вы на секунду задумываетесь о смысле жизни",
   "NoPetActionMsg6": "Вы пытаетесь научить своего питомца подавать лапу",
   "NoPetActionMsg7": "Вы даёте своему питомцу печеньку",
   "NoPetActionMsg8": "Вы репетируете свою речь для собрания",
-  "NoPetActionMsg9": "Вы понимаете, что не выключили космический утюг в столовой",
-  "NoPetActionMsg10": "Вы практикуете умение быстро нажать на кнопку. Просто на всякий случай",
+  "NoPetActionMsg9": "Вы понимаете, что не выключили\\nкосмический утюг в столовой",
+  "NoPetActionMsg10": "Вы практикуете умение быстро нажать на кнопку.\\nПросто на всякий случай",
   "NoPetActionMsg11": "Вы играетесь со своим питомцем",
   "NoPetActionMsg12": "Вы составляете план действий",
   "NoPetActionMsg13": "Вы мимоходом чините незначительную систему на карте",
@@ -3459,6 +3459,7 @@
   "HideAndSeek_MaxGameTime": "Макс. длительность игры",
   "SubText.HideAndSeek": "Прятки",
   "HNS.MinNeutrals": "<#00ffff>Мин.</color> кол-во <#ffab1b>Нейтралов</color>",
+  "HNS.DangerMeter": "Показывать (модовый) Измеритель Опаности",
   "HNS.MaxNeutrals": "<#0000ff>Макс.</color> кол-во <#ffab1b>Нейтралов</color>",
   "TimeLeft": "Осталось времени",
   "MinutesLeft": "{0} <color=#00ffa5>Минут осталось</color>",
@@ -3744,7 +3745,7 @@
   "ParityCheckRound": "Лимит сравнений на раунд исчерпан!\\nВы сможете проверить игроков только в следующем раунде.",
   "ParityCheckSelf": "ХА!! Ты думал всё так легко? Просто сравнить другого игрока с собой? Нет уж, тут думать надо.",
   "ParityCheckReveal": "ХА!! Ты думал всё так легко? Просто сравнить раскрытого игрока с кем-то другим? Нет уж, тут думать надо.",
-  "ParityCheckTitle": "[ ★ Сообщение от Inspector'а ★ ]",
+  "ParityCheckTitle": "[★ Сообщение от Inspector'а ★]",
   "ParityCheckTrue": "<b>{0}</b> и <b>{1}</b> в одной команде!\"",
   "ParityCheckFalse": "<b>{0}</b> и <b>{1}</b> <color=#ff1919>НЕ</color> в одной команде!",
   "ParityCheckTargetMsg": " был проверен Inspector'ом.",
@@ -3794,7 +3795,7 @@
   "RascalAppearAsMadmate": "Показывается как <color=#ff1919>Медмейт</color> при выкидывании",
   "CouncillorDead": " вы мертвы и не можете убивать.\"",
   "CouncillorMurderMax": "Лимит убийств достигнут.",
-  "LaughToWhoMurderSelf": "был засу... стоп, ты убил себя? Что?! Куда мир катится, самосуд вывел приговор себе!",
+  "LaughToWhoMurderSelf": "был засу... стоп, ты... ты.. ты убил себя? Что?! Куда мир катится, самосуд себе приговор выводит...",
   "MurderKill": "<b>{0}</b> был засужен.",
   "MurderHelp": "Команда: /tl [player ID]\\nВы можете видеть ID игроков около их никнеймов.\\nИли, вы можете использовать /id, чтобы посмотреть список всех ID игроков.",
   "MurderNull": "Пожалуйста, выберите ID живого игрока для убийства.",
@@ -3877,7 +3878,7 @@
   "OracleCheckReachLimit": "Способности закончились!",
   "OracleCheckSelfMsg": "Вы не верите даже себе? Ну ладно...",
   "OracleCheckLimit": "Напоминание: У вас осталось <b>{0}</b> единиц(-ы) способности",
-  "OracleCheckMsgTitle": "[ ★ Видение Oracle'а ★ ]",
+  "OracleCheckMsgTitle": "[★ Видение Oracle'а ★]",
   "OracleCheck.NotCrew": "Похоже, что этот игрок - не Член Экипажа",
   "OracleCheck.Crew": "Похоже, что этот игрок - Член Экипажа",
   "OracleCheck.Neut": "Похоже, что этот игрок - Нейтрал",
@@ -3916,7 +3917,7 @@
   "AdmiredPlayer": "Игрок рекрутирован",
   "AdmirerInvalidTarget": "Цель не может быть рекрутирована",
   "Admired-": "Admired ",
-  "SpiritualistNoticeTitle": "[ ★ Связь с Spiritualist'ом ★ ]",
+  "SpiritualistNoticeTitle": "[★ Связь с Spiritualist'ом ★]",
   "SpiritualistNoticeMessage": "Spiritualist получил на тебя стрелку!\\nТы можешь помочь ему, указав на убийцу или подставить мирного.",
   "SpiritualistShowGhostArrowForSeconds": "Длительность стрелки",
   "SpiritualistShowGhostArrowEverySeconds": "Интервал обновления стрелки",
@@ -3967,7 +3968,7 @@
   "DoomsayerCorrectlyGuessRole": "Вы угадали правильно!\\nНо игрок не умер, так как настройки вашей роли не позволяют гадать насмерть",
   "DoomsayerNotCorrectlyGuessRole": "Вы не угадали!\\nНо настройки не позволяют вам умереть.",
   "DoomsayerGuessCountMsg": "Вы правильно угадали {0} роли(-ей)",
-  "DoomsayerGuessCountTitle": "[ ★ Doomsayer ★ ]",
+  "DoomsayerGuessCountTitle": "[★ Doomsayer ★]",
   "DoomsayerGuessSameRoleAgainMsg": "Вы попытались угадать роль или атрибут, который был вами угадан ранее",
   "Developer": "Разработчик",
   "Sponsor": "Спонсор",
