This is too f-king big of a work

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3486,6 +3486,57 @@
   "TrollInfoLong": "GET KILLED TO WIN",
   "TrollVision": "Troll Vision",
   "TrollSpeed": "Troll Speed",
+  "Jumper": "JUMPER",
+  "JumperInfo": "USE VENTS TO HIDE FROM SEEKERS",
+  "JumperInfoLong": "USE VENTS TO HIDE FROM SEEKERS",
+  "JumperVision": "Jumper Vision",
+  "JumperSpeed": "Jumper Speed",
+  "Detector": "DETECTOR",
+  "DetectorInfo": "YOU KNOW WHERE SEEKERS ARE",
+  "DetectorInfoLong": "YOU KNOW WHERE SEEKERS ARE",
+  "DetectorFrequency": "Info about Seekers appears every",
+  "DetectorVision": "Detector Vision",
+  "DetectorSpeed": "Detector Speed",
+  "Jet": "JET",
+  "JetInfo": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
+  "JetInfoLong": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
+  "JetSpeed": "Jet Speed",
+  "JetDuration": "Jet Duration",
+  "JetCooldown": "Jet Cooldown",
+  "JetVision": "Jet Vision",
+  "JetSpeed": "Jet Speed",
+  "Dasher": "DASHER",
+  "DasherInfo": "PET TO BECOME FAST AND CATCH HIDERS",
+  "DasherInfoLong": "PET TO BECOME FAST AND CATCH HIDERS",
+  "DasherSpeed": "Dasher Speed",
+  "DasherDuration": "Dasher Duration",
+  "DasherCooldown": "Dasher Cooldown",
+  "DasherVision": "Dasher Vision",
+  "DasherSpeed": "Dasher Speed",
+  "Locator": "LOCATOR",
+  "LocatorInfo": "YOU GET CLUES TO FIND HIDERS",
+  "LocatorInfoLong": "YOU GET CLUES TO FIND HIDERS",
+  "LocatorDuration": "Locator Arrow Duration",
+  "LocatorCooldown": "Locator Arrow Cooldown",
+  "LocatorTargetKnows": "Hiders know when they are located",
+  "LocatorVision": "Locator Vision",
+  "LocatorSpeed": "Locator Speed",
+  "Venter": "VENTER",
+  "VenterInfo": "USE VENTS TO CATCH HIDERS",
+  "VenterInfoLong": "USE VENTS TO CATCH HIDERS",
+  "VenterVision": "Venter Vision",
+  "VenterSpeed": "Venter Speed",
+  "Agent": "AGENT",
+  "AgentInfo": "YOU'RE AN IMPOSTOR AMONG HIDERS",
+  "AgentInfoLong": "YOU'RE AN IMPOSTOR AMONG HIDERS",
+  "AgentVision": "Agent Vision",
+  "AgentSpeed": "Agent Speed",
+  "Taskinator": "TASKINATOR",
+  "TaskinatorInfo": "COMPLETE TASKS TO WIN",
+  "TaskinatorInfoLong": "COMPLETE TASKS TO WIN",
+  "TaskinatorCanWinAfterDeath": "Taskinator Can Win After Death",
+  "TaskinatorVision": "Taskinator Vision",
+  "TaskinatorSpeed": "Taskinator Speed",
   "Goose": "Goose",
   "GooseInfo": "Honk at players to annoy them",
   "GooseInfoLong": "(Crewmates):\\nAs the Goose, you can honk at players to annoy them.\\nYou can drag them around and make them unable to use their abilities while you're honking at them.",
