--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -1534,7 +1534,7 @@
   "EraseLimit": "Лимит стираний",
   "EraserHideVote": "Спрятать голоса <color=#ff1919>Eraser</color>'а",
   "EKill": "Кнопка убийства",
-  "EVote": "Голосовать",
+  "EVote": "Голос",
   "E2Kill": "Убить цель",
   "E2Block": "Блокировать стирание",
   "EraseMethod": "Метод стирания",
@@ -2497,7 +2497,7 @@
   "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Рандом</color>",
   "Swapster": "Swapster",
   "SwapsterInfo": "Меняй игроков местами",
-  "SwapsterInfoLong": "(предатель):\\nSwapster может выбрать двух игроков в меню морфа, чтобы поменять их местами.",
+  "SwapsterInfoLong": "(Предатель):\\nSwapster может выбрать двух игроков в меню морфа, чтобы поменять их местами.",
   "Kidnapper": "Kidnapper",
   "KidnapperInfo": "Телепортируй игроков к себе",
   "KidnapperInfoLong": "(Предатель):\\nKidnapper телепортирует к себе игрока, в которого морфнулся в меню морфа",
@@ -2778,7 +2778,7 @@
   "AutocratInfoLong": "(Член Экипажа):\\nПри выполнении любого таска, Autocrat телепортирует к себе ближайшего игрока.",
   "Nightmare": "Nightmare",
   "NightmareInfo": "Во тьме ты бессмертен",
-  "NightmareInfoLong": "(Член Экипажа):\\nNightmare не может быть убитым во время саботажа света.",
+  "NightmareInfoLong": "(Член Экипажа):\\nNightmare не может быть убит во время саботажа света.",
   "Perceiver": "Perceiver",
   "PerceiverInfo": "Проверяй количество убийц вокруг",
   "PerceiverInfoLong": "(Член Экипажа):\\nPerceiver может прыгнуть в люк/погладить питомца, чтобы узнать количество убийц, находящихся в определённом радиусе вокруг Perceiver'а. Радиус задаётся настройками.",
@@ -3056,7 +3056,7 @@
   "CustomTeamHelp": "Вы состоите в {0}!{1}\\nРаботайте сообща, чтобы выиграть вместе!",
   "NoPetActionMsg1": "Вы съели печеньку",
   "NoPetActionMsg2": "Вы осмотрелись",
-  "NoPetActionMsg3": "Вы задумались, подозрительные ли вы или нет...",
+  "NoPetActionMsg3": "Вы задумались, подозрительные вы или нет...",
   "NoPetActionMsg4": "Вы практикуетесь в роли детектива",
   "NoPetActionMsg5": "Вы на секунду задумываетесь о смысле жизни",
   "NoPetActionMsg6": "Вы пытаетесь научить своего питомца подавать лапу",
@@ -3337,11 +3337,11 @@
   "ChangelingInfo": "Выбери себе роль сам!",
   "ChangelingInfoLong": "(Предатель):\\nChangeling может выбрать себе роль самостоятельно. Чтобы сделать это, ему нужно сначала выбрать себе подходящую роль, которая будет отображаться у него под никнеймом (чтобы переключаться между выбранной ролью нужно прыгнуть в люк/погладить питомца). Когда Changeling найдёт в списке подходящую роль, ему нужно будет морфнуться. После этого он станет этой ролью до конца игры.\\n\\nВ зависимости от настроек, до выбора роли нельзя убивать, выбирать можно только определённые роли или нельзя выбрать роль, которая есть у партнёра.\\n\\nПримечание: если выбрана роль, которая базируется на роли Impostor, то кнопка морфа не пропадёт, но её откат будет составлять 300 секунд, а длительность морфа - 1 секунда.",
   "CL.All": "Все",
-  "CL.AllImp": "Все, базирующиеся на Impostor'у",
-  "CL.AllSS": "Все, базирующиеся на Shapeshifter'е",
+  "CL.AllImp": "Все, осн. на Impostor",
+  "CL.AllSS": "Все, осн. на Shapeshifter",
   "CL.Enabled": "Включённые",
-  "CL.EnabledImp": "Включённые, бизирующиеся на Impostor'е",
-  "CL.EnabledSS": "Включённые, бизирующиеся на Shapeshifter'е",
+  "CL.EnabledImp": "Вкл, осн. на Impostor",
+  "CL.EnabledSS": "Вкл, осн. на Shapeshifter",
   "CanPickPartnerRole": "Может стать ролью, которая есть у тиммейта",
   "CanKillBeforeRoleChange": "Может убивать до выбора роли",
   "AvailableRoles": "Доступные для становления роли:",
@@ -3361,7 +3361,7 @@
   "SilencerInfoLong": "(Предатель):\\nSilencer может забрать возможность говорить у определённого игрока на следующее собрание (способ замалчивания зависит от настроек).\\n\\nМеханика этой способности из-за ванильных ограничений ломаная, могут быть баги.",
   "SilencerDead": "<b>{0}</b> не может говорить, ведь <color=#ff1919>Silencer</color> забрал у него голос!",
   "SilencerKillTitle": "<color=#ffff00>WARNING</color>",
-  "SilencerShutUp": "Шшшш! Если будешь говорить - умрёшь.",
+  "SilencerShutUp": "Шшшшш! Если будешь говорить - умрёшь.",
   "SilencerMax": "Макс. кол-во сообщение от игроков без голоса",
   "SilencerSkillCooldown": "Откат способности",
   "Doppelganger": "Doppelganger",
@@ -3465,28 +3465,78 @@
   "MinutesLeft": "{0} <color=#00ffa5>Минут осталось</color>",
   "TimeDecreased": "Время уменьшено на 5с",
   "TimeDecreaseOnTaskComplete": "При выполнении таска уменьшать время на",
-  "SeekerVision": "Зрение Искателя",
-  "HiderVision": "Зрение Прячущегося",
-  "SeekerSpeed": "Скорость Искателя",
-  "HiderSpeed": "Скорость Прячущегося",
-  "SeekerCanVent": "Искатель может прыгать в люк",
+  "SeekerVision": "Зрение Seeker'а",
+  "HiderVision": "Зрение Hider'а",
+  "SeekerSpeed": "Скорость Seeker'а",
+  "HiderSpeed": "Скорость Hider'а",
+  "SeekerCanVent": "Искатель может прыгать в люки",
   "Hider": "HIDER",
   "HiderInfo": "ВЫЖИВИ И ДЕЛАЙ ТАСКИ",
-  "HiderInfoLong": "ВЫЖИВИ И ДЕЛАЙ ТАСКИ",
+  "HiderInfoLong": "(Прячущиеся):\\nЦель Hider'а - выжить до конца и спастись от Искателей. Выполняя таски, Hider уменьшает время игры.",
   "Seeker": "SEEKER",
   "SeekerInfo": "УБЕЙ ВСЕХ ПРЯЧУЩИХСЯ, ЧТОБЫ ПОБЕДИТЬ",
-  "SeekerInfoLong": "УБЕЙ ВСЕХ ПРЯЧУЩИХСЯ, ЧТОБЫ ПОБЕДИТЬ",
+  "SeekerInfoLong": "(Искатели):\\nЦель Seeker'а - убить всех прячущихся. Тогда он победит.",
   "Fox": "FOX",
   "FoxInfo": "ВЫЖИВИ ДО КОНЦА, ЧТОБЫ ПОБЕДИТЬ",
-  "FoxInfoLong": "ВЫЖИВИ ДО КОНЦА, ЧТОБЫ ПОБЕДИТЬ",
+  "FoxInfoLong": "(Нейтрал):\\nFox победит, если просто доживёт до конца игры.",
   "FoxVision": "Зрение Fox'а",
   "FoxSpeed": "Скорость Fox'а",
   "Troll": "TROLL",
   "TrollInfo": "УМРИ, ЧТОБЫ ПОБЕДИТЬ",
-  "TrollInfoLong": "УМРИ, ЧТОБЫ ПОБЕДИТЬ",
+  "TrollInfoLong": "(Нейтрал):\\nTroll мгновенно победит, если Искатель попытается его убить.",
   "TrollVision": "Зрение Troll'а",
   "TrollSpeed": "Скорость Troll'а",
-  "Generator": "Generator",
+  "Jumper": "JUMPER",
+  "JumperInfo": "ПРЯЧЬСЯ ОТ ИСКАТЕЛЕЙ В ЛЮКАХ",
+  "JumperInfoLong": "(Прячущиеся):\\nJumper может использовать люки.",
+  "JumperVision": "Зрение Jumper'а",
+  "JumperSpeed": "Скорость Jumper'а",
+  "Detector": "DETECTOR",
+  "DetectorInfo": "УЗНАВАЙ ГДЕ ИСКАТЕЛИ СЕЙЧАС",
+  "DetectorInfoLong": "(Прячущиеся):\\nРаз в несколько секунд Detector получает информацию о местоположении Искателей.",
+  "DetectorFrequency": "Информация об искателях отображается каждые",
+  "DetectorVision": "Зрение Detector'а",
+  "DetectorSpeed": "Скорость Detector'а",
+  "Jet": "JET",
+  "JetInfo": "СТАНОВИСЬ СВЕРХБЫСТРЫМ И УБЕГАЙ ОТ ИСКАТЕЛЕЙ",
+  "JetInfoLong": "(Прячущиеся):\\nJet может погладить питомца, чтобы активировать дэш и временно стать очень быстрым.",
+  "JetSpeed": "Скорость во время Дэша",
+  "JetDuration": "Длительность Дэша",
+  "JetCooldown": "Откат Дэша",
+  "JetVision": "Зрение Jet'а",
+  "JetSpeed": "Скорость Jet'а",
+  "Dasher": "DASHER",
+  "DasherInfo": "СТАНОВИСЬ СВЕРХБЫСТРЫМ И ЛОВИ ПРЯЧУЩИХСЯ",
+  "DasherInfoLong": "(Искатели):\\nDasher может погладить питомца, чтобы активировать дэш и временно стать очень быстрым.",
+  "DasherSpeed": "Скорость во время Дэша",
+  "DasherDuration": "Длительность Дэша",
+  "DasherCooldown": "Откат Дэша",
+  "DasherVision": "Зрение Dasher'а",
+  "DasherSpeed": "Скорость Dasher'а",
+  "Locator": "LOCATOR",
+  "LocatorInfo": "НИ ОДИН ПРЯЧУЩИЙСЯ ОТ ТЕБЯ НЕ СКРОЕТСЯ",
+  "LocatorInfoLong": "(Искатели):\\nLocator раз в определённое количество секунд получает стрелку на ближайшего прячущегося.",
+  "LocatorDuration": "Длительность показа стрелки",
+  "LocatorCooldown": "Откат показа стрелки",
+  "LocatorTargetKnows": "Прячущиеся узнают о трекинге",
+  "LocatorVision": "Зрение Locator'а",
+  "LocatorSpeed": "Скорость Locator'а",
+  "Venter": "VENTER",
+  "VenterInfo": "ИСПОЛЬЗУЙ ЛЮКИ ДЛЯ ЛОВЛИ ПРЯЧУЩИХСЯ",
+  "VenterInfoLong": "(Искатели):\\nVenter может использовать люки.",
+  "VenterVision": "Зрение Venter'а",
+  "VenterSpeed": "Скорость Venter'а",
+  "Agent": "AGENT",
+  "AgentInfo": "ТЫ - ПРЕДАТЕЛЬ СРЕДИ ПРЯЧУЩИХСЯ",
+  "AgentInfoLong": "(Искатели):\\nИскатели всегда видят стрелку на Agent'а и знают, кто он. Однако, прячущиеся видят Agent'а как своего.",
+  "AgentVision": "Зрение Agent'а",
+  "AgentSpeed": "Скорость Agent'а",
+  "Taskinator": "TASKINATOR",
+  "TaskinatorInfo": "СДЕЛАЙ ВСЕ ТАСКИ, ЧТОБЫ ВЫИГРАТЬ",
+  "TaskinatorInfoLong": "(Нейтрал):\\nTaskinator украдёт победу, если сделает все таски.",
+  "TaskinatorCanWinAfterDeath": "Taskinator может выиграть после смерти",
+  "TaskinatorVision": "Зрение Taskinator'а",
+  "TaskinatorSpeed": "Скорость Taskinator'а",
   "Goose": "Goose",
   "GooseInfo": "Взбеси всё живое!",
   "GooseInfoLong": "(Член Экипажа):\\nКак Goose, вы можете гоготать на игроков, чтобы просто раздражать их.\\nВо время гоготания вы тащите их за собой, а они не могут использовать свои способности.",
@@ -3501,6 +3551,7 @@
   "SimonDontShort": "<#ffa500>Должны не следовать инструкции</color>",
   "SimonDoMode": "<#00ffa5>Режим:</color> Следовать инструкции",
   "SimonDontMode": "<#00ffa5>Режим:</color> Не следовать инструкции",
+  "Generator": "Generator",
   "GeneratorInfo": "Генерируй способности",
   "GeneratorInfoLong": "(Предатель):\\nКак Generator, каждую секунду вы генерируете заряды. Убивать/Прыгать в люк/Морфиться/Саботировать можно только при достаточном кол-ве зарядов. Вы также теряете заряды во время морфа.",
   "Generator.ChargesGainedEverySecond": "Кол-во зарядов в секунду",
@@ -3776,7 +3827,7 @@
   "ImpCanBeLoyal": "<color=#ff1919>Предатели</color> могут стать <color=#B71556>Loyal</color>",
   "CrewCanBeLoyal": "<color=#8cffff>Члены Экипажа</color> могут стать <color=#B71556>Loyal</color>",
   "TasklessCrewCanBeLazy": "<color=#8cffff>Члены Экипажа</color> без тасков могут стать <color=#A4DFFE>Lazy</color>",
-  "TaskBasedCrewCanBeLazy": "<color=#8cffff>Члены Экипажа</color>, основанные на тасках могут стать <color=#A4DFFE>Lazy</color>",
+  "TaskBasedCrewCanBeLazy": "<color=#8cffff>Члены Экипажа</color>, основанные на тасках, могут стать <color=#A4DFFE>Lazy</color>",
   "SheriffCanBeMadmate": "<color=#ffb347>Sheriff</color> может стать <color=#ff1919>Madmate</color>",
   "MayorCanBeMadmate": "<color=#204d42>Mayor</color> может стать <color=#ff1919>Madmate</color>",
   "NGuesserCanBeMadmate": "<color=#eede26>Nice Guesser</color> может стать <color=#ff1919>Madmate</color>",
